[gd_scene load_steps=2 format=3 uid="uid://game_asset_downloader_001"]

[ext_resource type="Script" path="res://examples/game_asset_downloader/game_asset_downloader.gd" id="1"]

[node name="GameAssetDownloader" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Asset Downloader"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Download DLC, Mods, and Expansion Packs"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PathSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PathLabel" type="Label" parent="VBoxContainer/PathSection"]
layout_mode = 2
text = "Install Path:"

[node name="InstallPathInput" type="LineEdit" parent="VBoxContainer/PathSection"]
layout_mode = 2
placeholder_text = "/path/to/game/assets"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="AssetSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AssetLabel" type="Label" parent="VBoxContainer/AssetSection"]
layout_mode = 2
text = "Available Asset Packs:"

[node name="AssetList" type="ItemList" parent="VBoxContainer/AssetSection"]
layout_mode = 2
size_flags_vertical = 3
max_columns = 1

[node name="DownloadSelectedButton" type="Button" parent="VBoxContainer/AssetSection"]
layout_mode = 2
text = "Download Selected Pack"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ProgressContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PackNameLabel" type="Label" parent="VBoxContainer/ProgressContainer"]
layout_mode = 2
text = "Downloading: -"

[node name="OverallProgress" type="ProgressBar" parent="VBoxContainer/ProgressContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="VBoxContainer/ProgressContainer"]
layout_mode = 2
text = "Download: 0 MB/s | Upload: 0 MB/s | Peers: 0"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ProgressContainer"]
layout_mode = 2

[node name="FileProgressLabel" type="Label" parent="VBoxContainer/ProgressContainer"]
layout_mode = 2
text = "File Progress:"

[node name="FileProgressContainer" type="VBoxContainer" parent="VBoxContainer/ProgressContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Status: Ready"
autowrap_mode = 2
